@@ -82,7 +82,7 @@ When using the \emph{maketool} flag \verb+--syslibs+, you also need the followin
 \item{\emph{libjpeg62-dev} (required by PLGraphics)}
 \item{\emph{libpng12-dev} (required by PLGraphics)}
 \item{\emph{libfreetype6-dev} (required by PLRendererOpenGL and PLRendererOpenGLES)}
-\item{\emph{nvidia-cg-toolkit} (required by PLRendererOpenGLCg - >= Cg Toolkit 3.0 - February 2011 required) - \emph{nvidia-cg-toolkit} may be out-of-date, install a newer Cg \ac{SDK}: \url{http://developer.download.nvidia.com/cg/Cg_3.0/Cg-3.0_February2011_x86.deb}}
+\item{\emph{nvidia-cg-toolkit} (required by PLRendererOpenGLCg - >= Cg Toolkit 3.1 - February 2012 required) - \emph{nvidia-cg-toolkit} may be out-of-date, install a newer Cg \ac{SDK}: \url{http://developer.download.nvidia.com/cg/Cg_3.1/Cg-3.1_February2012_x86.deb}}
 \item{\emph{libopenal-dev} (required by PLSoundOpenAL)}
 \item{\emph{libogg-dev} (PLSoundOpenAL)}
 \item{\emph{libvorbis-dev} (PLSoundOpenAL)}
