@@ -13,6 +13,7 @@ Changes in PixelLight 0.9.11-R1 (not yet released)
 - Feature request ID: 3486884: Added "PLCore::MemoryManager::Move()"
 - Feature (Windows): Added support for "LuaJIT", a Just-in-time (JIT) compiler for Lua
 - Change (Windows): Updated Qt from "4.7.0" to "4.8.0"
+- Change: Updated from "Cg Toolkit 3.0 - February 2011" to "Cg Toolkit 3.1 - February 2012"
 - Removed: "PLViewerStandalone", use "PLViewer" instead and provide "PLViewer.cfg" in it's executable directory for standalone-mode
 - Bugfix: "PLRendererOpenGLES2" font rendering worked on "Tegra 2", but failed on "PowerVR SGX 540"
 - Bugfix: Now taking into account odd OpenGL ES 2.0 "gl_FragColor" behaviour on "LG P920 Optimus 3D" (PowerVR SGX 540, Android 2.3.5, "Link Error: Fragment shader was not successfully compiled.")
